Fixed broken style

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ p {
  */
 .image-wrap {
   position: relative;
+  background-color: #000000;
   width: 100%;
   height: 500px;
   top: 0;
@@ -360,10 +361,10 @@ section {
 
 .cs-style-3 figure figcaption {
   position: absolute;
-  padding: 10px 20px;
+  padding: 7px 20px;
   background: -webkit-linear-gradient(left, rgba(32, 147, 240, 0.75) 0%, rgba(25, 210, 116, 0.75) 100%);
   background: linear-gradient(to right, rgba(32, 147, 240, 0.75) 0%, rgba(25, 210, 116, 0.75) 100%);
-  height: 50px;
+  height: 40px;
   width: 100%;
   opacity: 0;
   bottom: 0;
@@ -379,7 +380,7 @@ section {
   color: #fff;
   width: 50%;
   position: absolute;
-  font-size: 2rem;
+  font-size: 1.65rem;
   margin-top: 3px;
 }
 
@@ -402,11 +403,17 @@ section {
 /**
  * Contact
  */
-.height {
-    height: 465px;
+.space-bottom {
+    padding-bottom: 50px;
 }
 
-.space {
+@media (max-width: 768px) {
+  .space-bottom {
+    padding-bottom: 75px;
+  }
+}
+
+.space-top {
     padding-top: 20px;
 }
 
@@ -435,11 +442,11 @@ section {
 footer {
   background: #2093F0;
   color: #fff;
-  height: 50px;
 }
 
 footer p {
   margin-top: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 /**
